# lunitool

./: Cargo.toml  README.md  UbuntuFDE.sh  build.rs  compile.sh  lunitool.sh  structure.txt
configs/: config.yaml  dialogrc
core/: common.sh  ui.sh
core/languages/: de.sh  en.sh
lib/: ui.sh
src/: app.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs
src/core/: disk_info.rs  mod.rs  system_info.rs
src/lang/: mod.rs
src/locales/: de.ftl  en.ftl
src/tools/: backup.rs  installation.rs  key_manager.rs  mod.rs
src/ui/: mod.rs  theme.rs  tui.rs  widgets.rs
