[package]
name = "lunitool"
version = "0.1.0"
edition = "2021"
authors = ["smalitobules"]
description = "Linux Universal Tool - Centralized Management Environment"

[dependencies]
# UI
crossterm = { version = "0.28.1", features = ["event-stream"] }
# Filesystem and system interactions
nix = "0.26"
users = "0.11"
sysinfo = "0.28"
# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Localization
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
# Andere
lazy_static = "1.4"
ratatui = { version = "0.29.0", features = ["serde"] }

[lib]
name = "lunitool_lib"
path = "src/lib.rs"

[[bin]]
name = "lunitool"
path = "src/main.rs"
